# MV4DMF

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  droplet_tracking.cpp  droplet_tracking.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h
src/detection/: CMakeLists.txt  detect.cpp  detect.h
src/preprocessing/: CMakeLists.txt  perspective_transform.cpp  perspective_transform.h  preprocessing.cpp  preprocessing.h  segment.cpp  segment.h
src/tracking/: CMakeLists.txt  tracking.cpp  tracking.h
src/tracking/CF Tracker/: CMakeLists.txt  ColorName_Feature.cpp  ColorName_Feature.hpp  KCF_Tracker.cpp  KCF_Tracker.hpp  utils.hpp
